parser/output/SelectorsParser/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACE

Grammar

Rule 0     S' -> selectors
Rule 1     empty -> <empty>
Rule 2     selectors -> selector COMMA space-opt selectors
Rule 3     space-opt -> space
Rule 4     space-opt -> empty
Rule 5     selectors -> selector
Rule 6     space -> space-delimiter space
Rule 7     selector -> simple-selector combinator selector
Rule 8     space -> space-delimiter
Rule 9     selector -> simple-selector space-opt
Rule 10    space-delimiter -> whitespace
Rule 11    space-delimiter -> blockcomment
Rule 12    space-delimiter -> htmlcomment
Rule 13    simple-selector -> type-selector selector-rules-opt
Rule 14    simple-selector -> selector-rules
Rule 15    whitespace -> SPACE
Rule 16    blockcomment -> BLOCKCOMMENT
Rule 17    type-selector -> element-selector
Rule 18    type-selector -> all-selector
Rule 19    htmlcomment -> CDO
Rule 20    htmlcomment -> CDC
Rule 21    element-selector -> namespace-prefix-opt element-name
Rule 22    all-selector -> namespace-prefix-opt OP_MUL
Rule 23    namespace-prefix-opt -> namespace-prefix
Rule 24    namespace-prefix-opt -> empty
Rule 25    namespace-prefix -> NAMESPACE_PREFIX
Rule 26    element-name -> IDENTIFIER
Rule 27    selector-rules-opt -> selector-rules
Rule 28    selector-rules-opt -> empty
Rule 29    selector-rules -> selector-rule selector-rules
Rule 30    selector-rules -> selector-rule
Rule 31    selector-rule -> hash
Rule 32    selector-rule -> class
Rule 33    selector-rule -> attribute
Rule 34    selector-rule -> pseudo
Rule 35    selector-rule -> negation
Rule 36    combinator -> space-opt combinator-op
Rule 37    combinator -> space
Rule 38    combinator-op -> OP_PLUS space-opt
Rule 39    combinator-op -> OP_GT space-opt
Rule 40    combinator-op -> OP_TILDE space-opt
Rule 41    hash -> HASH
Rule 42    class -> DOT IDENTIFIER
Rule 43    attribute -> LBRACKET space-opt namespace-prefix-opt IDENTIFIER space-opt attribute-match-opt RBRACKET
Rule 44    attribute-match-opt -> attribute-match
Rule 45    attribute-match-opt -> empty
Rule 46    attribute-match -> attribute-op attribute-value
Rule 47    attribute-op -> OP_PREFIXMATCH space-opt
Rule 48    attribute-op -> OP_SUFFIXMATCH space-opt
Rule 49    attribute-op -> OP_SUBSTRINGMATCH space-opt
Rule 50    attribute-op -> OP_INCLUDES space-opt
Rule 51    attribute-op -> OP_DASHMATCH space-opt
Rule 52    attribute-op -> OP_EQUALS space-opt
Rule 53    attribute-value -> IDENTIFIER space-opt
Rule 54    attribute-value -> STRING space-opt
Rule 55    pseudo -> COLON pseudo-selector
Rule 56    pseudo -> COLON COLON pseudo-selector
Rule 57    pseudo-selector -> IDENTIFIER
Rule 58    pseudo-selector -> pseudo-function
Rule 59    pseudo-function -> FUNCTION space-opt pseudo-expression RPAREN
Rule 60    pseudo-expression -> pseudo-term pseudo-expression
Rule 61    pseudo-expression -> pseudo-term
Rule 62    pseudo-term -> OP_PLUS space-opt
Rule 63    pseudo-term -> OP_MINUS space-opt
Rule 64    pseudo-term -> DIMENSION space-opt
Rule 65    pseudo-term -> NUMBER space-opt
Rule 66    pseudo-term -> STRING space-opt
Rule 67    pseudo-term -> IDENTIFIER space-opt
Rule 68    negation -> NOT_SELECTOR space-opt negation-argument RPAREN
Rule 69    negation-argument -> type-selector space-opt
Rule 70    negation-argument -> hash space-opt
Rule 71    negation-argument -> class space-opt
Rule 72    negation-argument -> attribute space-opt
Rule 73    negation-argument -> pseudo space-opt

Terminals, with rules where they appear

BLOCKCOMMENT         : 16
CDC                  : 20
CDO                  : 19
COLON                : 55 56 56
COMMA                : 2
DIMENSION            : 64
DOT                  : 42
FUNCTION             : 59
HASH                 : 41
IDENTIFIER           : 26 42 43 53 57 67
LBRACE               : 
LBRACKET             : 43
NAMESPACE_PREFIX     : 25
NOT_SELECTOR         : 68
NUMBER               : 65
OP_DASHMATCH         : 51
OP_EQUALS            : 52
OP_GT                : 39
OP_INCLUDES          : 50
OP_MINUS             : 63
OP_MUL               : 22
OP_PLUS              : 38 62
OP_PREFIXMATCH       : 47
OP_SUBSTRINGMATCH    : 49
OP_SUFFIXMATCH       : 48
OP_TILDE             : 40
RBRACKET             : 43
RPAREN               : 59 68
SPACE                : 15
STRING               : 54 66
error                : 

Nonterminals, with rules where they appear

all-selector         : 18
attribute            : 33 72
attribute-match      : 44
attribute-match-opt  : 43
attribute-op         : 46
attribute-value      : 46
blockcomment         : 11
class                : 32 71
combinator           : 7
combinator-op        : 36
element-name         : 21
element-selector     : 17
empty                : 4 24 28 45
hash                 : 31 70
htmlcomment          : 12
namespace-prefix     : 23
namespace-prefix-opt : 21 22 43
negation             : 35
negation-argument    : 68
pseudo               : 34 73
pseudo-expression    : 59 60
pseudo-function      : 58
pseudo-selector      : 55 56
pseudo-term          : 60 61
selector             : 2 5 7
selector-rule        : 29 30
selector-rules       : 14 27 29
selector-rules-opt   : 13
selectors            : 2 0
simple-selector      : 7 9
space                : 3 6 37
space-delimiter      : 6 8
space-opt            : 2 9 36 38 39 40 43 43 47 48 49 50 51 52 53 54 59 62 63 64 65 66 67 68 69 70 71 72 73
type-selector        : 13 69
whitespace           : 10

Parsing method: LALR

state 0

    (0) S' -> . selectors
    (2) selectors -> . selector COMMA space-opt selectors
    (5) selectors -> . selector
    (7) selector -> . simple-selector combinator selector
    (9) selector -> . simple-selector space-opt
    (13) simple-selector -> . type-selector selector-rules-opt
    (14) simple-selector -> . selector-rules
    (17) type-selector -> . element-selector
    (18) type-selector -> . all-selector
    (29) selector-rules -> . selector-rule selector-rules
    (30) selector-rules -> . selector-rule
    (21) element-selector -> . namespace-prefix-opt element-name
    (22) all-selector -> . namespace-prefix-opt OP_MUL
    (31) selector-rule -> . hash
    (32) selector-rule -> . class
    (33) selector-rule -> . attribute
    (34) selector-rule -> . pseudo
    (35) selector-rule -> . negation
    (23) namespace-prefix-opt -> . namespace-prefix
    (24) namespace-prefix-opt -> . empty
    (41) hash -> . HASH
    (42) class -> . DOT IDENTIFIER
    (43) attribute -> . LBRACKET space-opt namespace-prefix-opt IDENTIFIER space-opt attribute-match-opt RBRACKET
    (55) pseudo -> . COLON pseudo-selector
    (56) pseudo -> . COLON COLON pseudo-selector
    (68) negation -> . NOT_SELECTOR space-opt negation-argument RPAREN
    (25) namespace-prefix -> . NAMESPACE_PREFIX
    (1) empty -> .

    HASH            shift and go to state 5
    DOT             shift and go to state 6
    LBRACKET        shift and go to state 4
    COLON           shift and go to state 11
    NOT_SELECTOR    shift and go to state 21
    NAMESPACE_PREFIX shift and go to state 22
    OP_MUL          reduce using rule 1 (empty -> .)
    IDENTIFIER      reduce using rule 1 (empty -> .)

    attribute                      shift and go to state 1
    namespace-prefix               shift and go to state 2
    type-selector                  shift and go to state 3
    element-selector               shift and go to state 7
    all-selector                   shift and go to state 8
    simple-selector                shift and go to state 9
    negation                       shift and go to state 10
    empty                          shift and go to state 12
    selector-rule                  shift and go to state 13
    hash                           shift and go to state 14
    selector                       shift and go to state 15
    class                          shift and go to state 16
    namespace-prefix-opt           shift and go to state 17
    selector-rules                 shift and go to state 18
    pseudo                         shift and go to state 19
    selectors                      shift and go to state 20

state 1

    (33) selector-rule -> attribute .

    HASH            reduce using rule 33 (selector-rule -> attribute .)
    DOT             reduce using rule 33 (selector-rule -> attribute .)
    LBRACKET        reduce using rule 33 (selector-rule -> attribute .)
    COLON           reduce using rule 33 (selector-rule -> attribute .)
    NOT_SELECTOR    reduce using rule 33 (selector-rule -> attribute .)
    SPACE           reduce using rule 33 (selector-rule -> attribute .)
    BLOCKCOMMENT    reduce using rule 33 (selector-rule -> attribute .)
    CDO             reduce using rule 33 (selector-rule -> attribute .)
    CDC             reduce using rule 33 (selector-rule -> attribute .)
    OP_PLUS         reduce using rule 33 (selector-rule -> attribute .)
    OP_GT           reduce using rule 33 (selector-rule -> attribute .)
    OP_TILDE        reduce using rule 33 (selector-rule -> attribute .)
    COMMA           reduce using rule 33 (selector-rule -> attribute .)
    $end            reduce using rule 33 (selector-rule -> attribute .)


state 2

    (23) namespace-prefix-opt -> namespace-prefix .

    IDENTIFIER      reduce using rule 23 (namespace-prefix-opt -> namespace-prefix .)
    OP_MUL          reduce using rule 23 (namespace-prefix-opt -> namespace-prefix .)


state 3

    (13) simple-selector -> type-selector . selector-rules-opt
    (27) selector-rules-opt -> . selector-rules
    (28) selector-rules-opt -> . empty
    (29) selector-rules -> . selector-rule selector-rules
    (30) selector-rules -> . selector-rule
    (1) empty -> .
    (31) selector-rule -> . hash
    (32) selector-rule -> . class
    (33) selector-rule -> . attribute
    (34) selector-rule -> . pseudo
    (35) selector-rule -> . negation
    (41) hash -> . HASH
    (42) class -> . DOT IDENTIFIER
    (43) attribute -> . LBRACKET space-opt namespace-prefix-opt IDENTIFIER space-opt attribute-match-opt RBRACKET
    (55) pseudo -> . COLON pseudo-selector
    (56) pseudo -> . COLON COLON pseudo-selector
    (68) negation -> . NOT_SELECTOR space-opt negation-argument RPAREN

    SPACE           reduce using rule 1 (empty -> .)
    BLOCKCOMMENT    reduce using rule 1 (empty -> .)
    CDO             reduce using rule 1 (empty -> .)
    CDC             reduce using rule 1 (empty -> .)
    OP_PLUS         reduce using rule 1 (empty -> .)
    OP_GT           reduce using rule 1 (empty -> .)
    OP_TILDE        reduce using rule 1 (empty -> .)
    COMMA           reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)
    HASH            shift and go to state 5
    DOT             shift and go to state 6
    LBRACKET        shift and go to state 4
    COLON           shift and go to state 11
    NOT_SELECTOR    shift and go to state 21

    hash                           shift and go to state 14
    selector-rules-opt             shift and go to state 24
    attribute                      shift and go to state 1
    selector-rules                 shift and go to state 25
    pseudo                         shift and go to state 19
    negation                       shift and go to state 10
    class                          shift and go to state 16
    empty                          shift and go to state 23
    selector-rule                  shift and go to state 13

state 4

    (43) attribute -> LBRACKET . space-opt namespace-prefix-opt IDENTIFIER space-opt attribute-match-opt RBRACKET
    (3) space-opt -> . space
    (4) space-opt -> . empty
    (6) space -> . space-delimiter space
    (8) space -> . space-delimiter
    (1) empty -> .
    (10) space-delimiter -> . whitespace
    (11) space-delimiter -> . blockcomment
    (12) space-delimiter -> . htmlcomment
    (15) whitespace -> . SPACE
    (16) blockcomment -> . BLOCKCOMMENT
    (19) htmlcomment -> . CDO
    (20) htmlcomment -> . CDC

    NAMESPACE_PREFIX reduce using rule 1 (empty -> .)
    IDENTIFIER      reduce using rule 1 (empty -> .)
    SPACE           shift and go to state 30
    BLOCKCOMMENT    shift and go to state 34
    CDO             shift and go to state 27
    CDC             shift and go to state 31

    htmlcomment                    shift and go to state 26
    whitespace                     shift and go to state 28
    space                          shift and go to state 29
    space-opt                      shift and go to state 32
    space-delimiter                shift and go to state 33
    blockcomment                   shift and go to state 35
    empty                          shift and go to state 36

state 5

    (41) hash -> HASH .

    HASH            reduce using rule 41 (hash -> HASH .)
    DOT             reduce using rule 41 (hash -> HASH .)
    LBRACKET        reduce using rule 41 (hash -> HASH .)
    COLON           reduce using rule 41 (hash -> HASH .)
    NOT_SELECTOR    reduce using rule 41 (hash -> HASH .)
    SPACE           reduce using rule 41 (hash -> HASH .)
    BLOCKCOMMENT    reduce using rule 41 (hash -> HASH .)
    CDO             reduce using rule 41 (hash -> HASH .)
    CDC             reduce using rule 41 (hash -> HASH .)
    OP_PLUS         reduce using rule 41 (hash -> HASH .)
    OP_GT           reduce using rule 41 (hash -> HASH .)
    OP_TILDE        reduce using rule 41 (hash -> HASH .)
    COMMA           reduce using rule 41 (hash -> HASH .)
    $end            reduce using rule 41 (hash -> HASH .)
    RPAREN          reduce using rule 41 (hash -> HASH .)


state 6

    (42) class -> DOT . IDENTIFIER

    IDENTIFIER      shift and go to state 37


state 7

    (17) type-selector -> element-selector .

    HASH            reduce using rule 17 (type-selector -> element-selector .)
    DOT             reduce using rule 17 (type-selector -> element-selector .)
    LBRACKET        reduce using rule 17 (type-selector -> element-selector .)
    COLON           reduce using rule 17 (type-selector -> element-selector .)
    NOT_SELECTOR    reduce using rule 17 (type-selector -> element-selector .)
    SPACE           reduce using rule 17 (type-selector -> element-selector .)
    BLOCKCOMMENT    reduce using rule 17 (type-selector -> element-selector .)
    CDO             reduce using rule 17 (type-selector -> element-selector .)
    CDC             reduce using rule 17 (type-selector -> element-selector .)
    OP_PLUS         reduce using rule 17 (type-selector -> element-selector .)
    OP_GT           reduce using rule 17 (type-selector -> element-selector .)
    OP_TILDE        reduce using rule 17 (type-selector -> element-selector .)
    COMMA           reduce using rule 17 (type-selector -> element-selector .)
    $end            reduce using rule 17 (type-selector -> element-selector .)
    RPAREN          reduce using rule 17 (type-selector -> element-selector .)


state 8

    (18) type-selector -> all-selector .

    HASH            reduce using rule 18 (type-selector -> all-selector .)
    DOT             reduce using rule 18 (type-selector -> all-selector .)
    LBRACKET        reduce using rule 18 (type-selector -> all-selector .)
    COLON           reduce using rule 18 (type-selector -> all-selector .)
    NOT_SELECTOR    reduce using rule 18 (type-selector -> all-selector .)
    SPACE           reduce using rule 18 (type-selector -> all-selector .)
    BLOCKCOMMENT    reduce using rule 18 (type-selector -> all-selector .)
    CDO             reduce using rule 18 (type-selector -> all-selector .)
    CDC             reduce using rule 18 (type-selector -> all-selector .)
    OP_PLUS         reduce using rule 18 (type-selector -> all-selector .)
    OP_GT           reduce using rule 18 (type-selector -> all-selector .)
    OP_TILDE        reduce using rule 18 (type-selector -> all-selector .)
    COMMA           reduce using rule 18 (type-selector -> all-selector .)
    $end            reduce using rule 18 (type-selector -> all-selector .)
    RPAREN          reduce using rule 18 (type-selector -> all-selector .)


state 9

    (7) selector -> simple-selector . combinator selector
    (9) selector -> simple-selector . space-opt
    (36) combinator -> . space-opt combinator-op
    (37) combinator -> . space
    (3) space-opt -> . space
    (4) space-opt -> . empty
    (6) space -> . space-delimiter space
    (8) space -> . space-delimiter
    (1) empty -> .
    (10) space-delimiter -> . whitespace
    (11) space-delimiter -> . blockcomment
    (12) space-delimiter -> . htmlcomment
    (15) whitespace -> . SPACE
    (16) blockcomment -> . BLOCKCOMMENT
    (19) htmlcomment -> . CDO
    (20) htmlcomment -> . CDC

    OP_PLUS         reduce using rule 1 (empty -> .)
    OP_GT           reduce using rule 1 (empty -> .)
    OP_TILDE        reduce using rule 1 (empty -> .)
    COMMA           reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)
    SPACE           shift and go to state 30
    BLOCKCOMMENT    shift and go to state 34
    CDO             shift and go to state 27
    CDC             shift and go to state 31

    htmlcomment                    shift and go to state 26
    whitespace                     shift and go to state 28
    space                          shift and go to state 38
    blockcomment                   shift and go to state 35
    combinator                     shift and go to state 39
    space-opt                      shift and go to state 40
    space-delimiter                shift and go to state 33
    empty                          shift and go to state 36

state 10

    (35) selector-rule -> negation .

    HASH            reduce using rule 35 (selector-rule -> negation .)
    DOT             reduce using rule 35 (selector-rule -> negation .)
    LBRACKET        reduce using rule 35 (selector-rule -> negation .)
    COLON           reduce using rule 35 (selector-rule -> negation .)
    NOT_SELECTOR    reduce using rule 35 (selector-rule -> negation .)
    SPACE           reduce using rule 35 (selector-rule -> negation .)
    BLOCKCOMMENT    reduce using rule 35 (selector-rule -> negation .)
    CDO             reduce using rule 35 (selector-rule -> negation .)
    CDC             reduce using rule 35 (selector-rule -> negation .)
    OP_PLUS         reduce using rule 35 (selector-rule -> negation .)
    OP_GT           reduce using rule 35 (selector-rule -> negation .)
    OP_TILDE        reduce using rule 35 (selector-rule -> negation .)
    COMMA           reduce using rule 35 (selector-rule -> negation .)
    $end            reduce using rule 35 (selector-rule -> negation .)


state 11

    (55) pseudo -> COLON . pseudo-selector
    (56) pseudo -> COLON . COLON pseudo-selector
    (57) pseudo-selector -> . IDENTIFIER
    (58) pseudo-selector -> . pseudo-function
    (59) pseudo-function -> . FUNCTION space-opt pseudo-expression RPAREN

    COLON           shift and go to state 43
    IDENTIFIER      shift and go to state 45
    FUNCTION        shift and go to state 42

    pseudo-function                shift and go to state 41
    pseudo-selector                shift and go to state 44

state 12

    (24) namespace-prefix-opt -> empty .

    IDENTIFIER      reduce using rule 24 (namespace-prefix-opt -> empty .)
    OP_MUL          reduce using rule 24 (namespace-prefix-opt -> empty .)


state 13

    (29) selector-rules -> selector-rule . selector-rules
    (30) selector-rules -> selector-rule .
    (29) selector-rules -> . selector-rule selector-rules
    (30) selector-rules -> . selector-rule
    (31) selector-rule -> . hash
    (32) selector-rule -> . class
    (33) selector-rule -> . attribute
    (34) selector-rule -> . pseudo
    (35) selector-rule -> . negation
    (41) hash -> . HASH
    (42) class -> . DOT IDENTIFIER
    (43) attribute -> . LBRACKET space-opt namespace-prefix-opt IDENTIFIER space-opt attribute-match-opt RBRACKET
    (55) pseudo -> . COLON pseudo-selector
    (56) pseudo -> . COLON COLON pseudo-selector
    (68) negation -> . NOT_SELECTOR space-opt negation-argument RPAREN

    SPACE           reduce using rule 30 (selector-rules -> selector-rule .)
    BLOCKCOMMENT    reduce using rule 30 (selector-rules -> selector-rule .)
    CDO             reduce using rule 30 (selector-rules -> selector-rule .)
    CDC             reduce using rule 30 (selector-rules -> selector-rule .)
    OP_PLUS         reduce using rule 30 (selector-rules -> selector-rule .)
    OP_GT           reduce using rule 30 (selector-rules -> selector-rule .)
    OP_TILDE        reduce using rule 30 (selector-rules -> selector-rule .)
    COMMA           reduce using rule 30 (selector-rules -> selector-rule .)
    $end            reduce using rule 30 (selector-rules -> selector-rule .)
    HASH            shift and go to state 5
    DOT             shift and go to state 6
    LBRACKET        shift and go to state 4
    COLON           shift and go to state 11
    NOT_SELECTOR    shift and go to state 21

    hash                           shift and go to state 14
    attribute                      shift and go to state 1
    selector-rules                 shift and go to state 46
    pseudo                         shift and go to state 19
    negation                       shift and go to state 10
    class                          shift and go to state 16
    selector-rule                  shift and go to state 13

state 14

    (31) selector-rule -> hash .

    HASH            reduce using rule 31 (selector-rule -> hash .)
    DOT             reduce using rule 31 (selector-rule -> hash .)
    LBRACKET        reduce using rule 31 (selector-rule -> hash .)
    COLON           reduce using rule 31 (selector-rule -> hash .)
    NOT_SELECTOR    reduce using rule 31 (selector-rule -> hash .)
    SPACE           reduce using rule 31 (selector-rule -> hash .)
    BLOCKCOMMENT    reduce using rule 31 (selector-rule -> hash .)
    CDO             reduce using rule 31 (selector-rule -> hash .)
    CDC             reduce using rule 31 (selector-rule -> hash .)
    OP_PLUS         reduce using rule 31 (selector-rule -> hash .)
    OP_GT           reduce using rule 31 (selector-rule -> hash .)
    OP_TILDE        reduce using rule 31 (selector-rule -> hash .)
    COMMA           reduce using rule 31 (selector-rule -> hash .)
    $end            reduce using rule 31 (selector-rule -> hash .)


state 15

    (2) selectors -> selector . COMMA space-opt selectors
    (5) selectors -> selector .

    COMMA           shift and go to state 47
    $end            reduce using rule 5 (selectors -> selector .)


state 16

    (32) selector-rule -> class .

    HASH            reduce using rule 32 (selector-rule -> class .)
    DOT             reduce using rule 32 (selector-rule -> class .)
    LBRACKET        reduce using rule 32 (selector-rule -> class .)
    COLON           reduce using rule 32 (selector-rule -> class .)
    NOT_SELECTOR    reduce using rule 32 (selector-rule -> class .)
    SPACE           reduce using rule 32 (selector-rule -> class .)
    BLOCKCOMMENT    reduce using rule 32 (selector-rule -> class .)
    CDO             reduce using rule 32 (selector-rule -> class .)
    CDC             reduce using rule 32 (selector-rule -> class .)
    OP_PLUS         reduce using rule 32 (selector-rule -> class .)
    OP_GT           reduce using rule 32 (selector-rule -> class .)
    OP_TILDE        reduce using rule 32 (selector-rule -> class .)
    COMMA           reduce using rule 32 (selector-rule -> class .)
    $end            reduce using rule 32 (selector-rule -> class .)


state 17

    (21) element-selector -> namespace-prefix-opt . element-name
    (22) all-selector -> namespace-prefix-opt . OP_MUL
    (26) element-name -> . IDENTIFIER

    OP_MUL          shift and go to state 50
    IDENTIFIER      shift and go to state 49

    element-name                   shift and go to state 48

state 18

    (14) simple-selector -> selector-rules .

    SPACE           reduce using rule 14 (simple-selector -> selector-rules .)
    BLOCKCOMMENT    reduce using rule 14 (simple-selector -> selector-rules .)
    CDO             reduce using rule 14 (simple-selector -> selector-rules .)
    CDC             reduce using rule 14 (simple-selector -> selector-rules .)
    OP_PLUS         reduce using rule 14 (simple-selector -> selector-rules .)
    OP_GT           reduce using rule 14 (simple-selector -> selector-rules .)
    OP_TILDE        reduce using rule 14 (simple-selector -> selector-rules .)
    COMMA           reduce using rule 14 (simple-selector -> selector-rules .)
    $end            reduce using rule 14 (simple-selector -> selector-rules .)


state 19

    (34) selector-rule -> pseudo .

    HASH            reduce using rule 34 (selector-rule -> pseudo .)
    DOT             reduce using rule 34 (selector-rule -> pseudo .)
    LBRACKET        reduce using rule 34 (selector-rule -> pseudo .)
    COLON           reduce using rule 34 (selector-rule -> pseudo .)
    NOT_SELECTOR    reduce using rule 34 (selector-rule -> pseudo .)
    SPACE           reduce using rule 34 (selector-rule -> pseudo .)
    BLOCKCOMMENT    reduce using rule 34 (selector-rule -> pseudo .)
    CDO             reduce using rule 34 (selector-rule -> pseudo .)
    CDC             reduce using rule 34 (selector-rule -> pseudo .)
    OP_PLUS         reduce using rule 34 (selector-rule -> pseudo .)
    OP_GT           reduce using rule 34 (selector-rule -> pseudo .)
    OP_TILDE        reduce using rule 34 (selector-rule -> pseudo .)
    COMMA           reduce using rule 34 (selector-rule -> pseudo .)
    $end            reduce using rule 34 (selector-rule -> pseudo .)


state 20

    (0) S' -> selectors .



state 21

    (68) negation -> NOT_SELECTOR . space-opt negation-argument RPAREN
    (3) space-opt -> . space
    (4) space-opt -> . empty
    (6) space -> . space-delimiter space
    (8) space -> . space-delimiter
    (1) empty -> .
    (10) space-delimiter -> . whitespace
    (11) space-delimiter -> . blockcomment
    (12) space-delimiter -> . htmlcomment
    (15) whitespace -> . SPACE
    (16) blockcomment -> . BLOCKCOMMENT
    (19) htmlcomment -> . CDO
    (20) htmlcomment -> . CDC

    HASH            reduce using rule 1 (empty -> .)
    DOT             reduce using rule 1 (empty -> .)
    LBRACKET        reduce using rule 1 (empty -> .)
    COLON           reduce using rule 1 (empty -> .)
    NAMESPACE_PREFIX reduce using rule 1 (empty -> .)
    OP_MUL          reduce using rule 1 (empty -> .)
    IDENTIFIER      reduce using rule 1 (empty -> .)
    SPACE           shift and go to state 30
    BLOCKCOMMENT    shift and go to state 34
    CDO             shift and go to state 27
    CDC             shift and go to state 31

    htmlcomment                    shift and go to state 26
    whitespace                     shift and go to state 28
    space                          shift and go to state 29
    blockcomment                   shift and go to state 35
    space-opt                      shift and go to state 51
    space-delimiter                shift and go to state 33
    empty                          shift and go to state 36

state 22

    (25) namespace-prefix -> NAMESPACE_PREFIX .

    OP_MUL          reduce using rule 25 (namespace-prefix -> NAMESPACE_PREFIX .)
    IDENTIFIER      reduce using rule 25 (namespace-prefix -> NAMESPACE_PREFIX .)


state 23

    (28) selector-rules-opt -> empty .

    SPACE           reduce using rule 28 (selector-rules-opt -> empty .)
    BLOCKCOMMENT    reduce using rule 28 (selector-rules-opt -> empty .)
    CDO             reduce using rule 28 (selector-rules-opt -> empty .)
    CDC             reduce using rule 28 (selector-rules-opt -> empty .)
    OP_PLUS         reduce using rule 28 (selector-rules-opt -> empty .)
    OP_GT           reduce using rule 28 (selector-rules-opt -> empty .)
    OP_TILDE        reduce using rule 28 (selector-rules-opt -> empty .)
    COMMA           reduce using rule 28 (selector-rules-opt -> empty .)
    $end            reduce using rule 28 (selector-rules-opt -> empty .)


state 24

    (13) simple-selector -> type-selector selector-rules-opt .

    SPACE           reduce using rule 13 (simple-selector -> type-selector selector-rules-opt .)
    BLOCKCOMMENT    reduce using rule 13 (simple-selector -> type-selector selector-rules-opt .)
    CDO             reduce using rule 13 (simple-selector -> type-selector selector-rules-opt .)
    CDC             reduce using rule 13 (simple-selector -> type-selector selector-rules-opt .)
    OP_PLUS         reduce using rule 13 (simple-selector -> type-selector selector-rules-opt .)
    OP_GT           reduce using rule 13 (simple-selector -> type-selector selector-rules-opt .)
    OP_TILDE        reduce using rule 13 (simple-selector -> type-selector selector-rules-opt .)
    COMMA           reduce using rule 13 (simple-selector -> type-selector selector-rules-opt .)
    $end            reduce using rule 13 (simple-selector -> type-selector selector-rules-opt .)


state 25

    (27) selector-rules-opt -> selector-rules .

    SPACE           reduce using rule 27 (selector-rules-opt -> selector-rules .)
    BLOCKCOMMENT    reduce using rule 27 (selector-rules-opt -> selector-rules .)
    CDO             reduce using rule 27 (selector-rules-opt -> selector-rules .)
    CDC             reduce using rule 27 (selector-rules-opt -> selector-rules .)
    OP_PLUS         reduce using rule 27 (selector-rules-opt -> selector-rules .)
    OP_GT           reduce using rule 27 (selector-rules-opt -> selector-rules .)
    OP_TILDE        reduce using rule 27 (selector-rules-opt -> selector-rules .)
    COMMA           reduce using rule 27 (selector-rules-opt -> selector-rules .)
    $end            reduce using rule 27 (selector-rules-opt -> selector-rules .)


state 26

    (12) space-delimiter -> htmlcomment .

    SPACE           reduce using rule 12 (space-delimiter -> htmlcomment .)
    BLOCKCOMMENT    reduce using rule 12 (space-delimiter -> htmlcomment .)
    CDO             reduce using rule 12 (space-delimiter -> htmlcomment .)
    CDC             reduce using rule 12 (space-delimiter -> htmlcomment .)
    HASH            reduce using rule 12 (space-delimiter -> htmlcomment .)
    DOT             reduce using rule 12 (space-delimiter -> htmlcomment .)
    LBRACKET        reduce using rule 12 (space-delimiter -> htmlcomment .)
    COLON           reduce using rule 12 (space-delimiter -> htmlcomment .)
    NAMESPACE_PREFIX reduce using rule 12 (space-delimiter -> htmlcomment .)
    OP_MUL          reduce using rule 12 (space-delimiter -> htmlcomment .)
    IDENTIFIER      reduce using rule 12 (space-delimiter -> htmlcomment .)
    NOT_SELECTOR    reduce using rule 12 (space-delimiter -> htmlcomment .)
    OP_PLUS         reduce using rule 12 (space-delimiter -> htmlcomment .)
    OP_MINUS        reduce using rule 12 (space-delimiter -> htmlcomment .)
    DIMENSION       reduce using rule 12 (space-delimiter -> htmlcomment .)
    NUMBER          reduce using rule 12 (space-delimiter -> htmlcomment .)
    STRING          reduce using rule 12 (space-delimiter -> htmlcomment .)
    RPAREN          reduce using rule 12 (space-delimiter -> htmlcomment .)
    OP_GT           reduce using rule 12 (space-delimiter -> htmlcomment .)
    OP_TILDE        reduce using rule 12 (space-delimiter -> htmlcomment .)
    COMMA           reduce using rule 12 (space-delimiter -> htmlcomment .)
    $end            reduce using rule 12 (space-delimiter -> htmlcomment .)
    OP_PREFIXMATCH  reduce using rule 12 (space-delimiter -> htmlcomment .)
    OP_SUFFIXMATCH  reduce using rule 12 (space-delimiter -> htmlcomment .)
    OP_SUBSTRINGMATCH reduce using rule 12 (space-delimiter -> htmlcomment .)
    OP_INCLUDES     reduce using rule 12 (space-delimiter -> htmlcomment .)
    OP_DASHMATCH    reduce using rule 12 (space-delimiter -> htmlcomment .)
    OP_EQUALS       reduce using rule 12 (space-delimiter -> htmlcomment .)
    RBRACKET        reduce using rule 12 (space-delimiter -> htmlcomment .)


state 27

    (19) htmlcomment -> CDO .
